--- a/config-data/registry-service.yml
+++ b/config-data/registry-service.yml
@@ -4,6 +4,8 @@ server:
 eureka: 
   instance: 
     hostname: localhost
+  server:
+    waitTimeInMsWhenSyncEmpty: 0  
   client: 
     registerWithEureka: false
     fetchRegistry: false
