--- a/config-data/customer-service.yml
+++ b/config-data/customer-service.yml
@@ -42,5 +42,7 @@ spring:
       console: "%{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n}"
   eureka:
     client:
+      server:
+        waitTimeInMsWhenSyncEmpty: 0  
       serviceUrl:
         defaultZone: http://localhost:8099/eureka/     
