--- a/config-data/shopping-service.yml
+++ b/config-data/shopping-service.yml
@@ -43,5 +43,12 @@ spring:
   eureka:
     client:
       serviceUrl:
-        defaultZone: http://localhost:8762/eureka/      
+        defaultZone: http://localhost:8762/eureka/     
+  feign:
+    hystrix:
+      enabled: true
+    ribbon:
+      enabled: true
+    circuitbreaker:
+      enabled: true       
 
